<resources>

    <!-- Strings related to the application name-->
    <string name="app_name">PLCMonitor</string>

    <!-- Strings related to buttons -->
    <string name="action_add_plc">Add PLC</string>
    <string name="action_add_user">Add User</string>
    <string name="action_back">Back</string>
    <string name="action_connect">Connect</string>
    <string name="action_edit_plc">Edit PLC</string>
    <string name="action_edit_user">Edit User</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>

    <!-- Strings related to dialogs -->
    <string name="dialog_about">
        <![CDATA[
            <h5><font color="#26A69A">1. Introduction</font></h5>
            <p>
                PLCMonitor is an application for remote monitoring and control
                of various industrial processes.
            </p>
            <p>
                This application was developed by Terencio Agozzino, licensed
                under the Apache License, Version 2.0.
            </p>
            <p>
                Free of you to contribute to the application on GitHub: <br>
                (<a href="https://github.com/rememberYou/plcmonitor" alt="GitHub link>
                    <font color="#FF4081">https://github.com/rememberYou/plc-monitor</font>
                 </a>)
            </p>
            <h5><font color="#26A69A">2. Connection to a PLC</font></h5>
            <p>
                The connection to a PLC required to enter three parameters: <br>

                1. IP address (e.g. <strong>10.1.0.120</strong>) <br>
                2. Rack (e.g. <strong>1</strong>) <br>
                3. Slot (e.g. <strong>1</strong>)
            </p>
            <p>
                Until now, the connection is <font color="#FF4081">only</font>
                available for Siemens PLCs and industrial processes that are
                already in the default list.
            </p>
            <h5><font color="#26A69A">3. Overview of PLC</font></h5>
            <p>
                The overview allows you to easily manage your PLCs by changing
                their various connection settings, logging in to them again
                without entering the connection credentials or simply deleting them.
            </p>
        ]]>
    </string>
    <string name="dialog_account_delete">
        Please be aware that if you delete your account, all data, privileges
        and PLCs associated with it will be deleted.
    </string>
    <string name="dialog_user_admin">
        Please be aware that if you grant administrator rights to a user, the user
        can change values in various PLCs and promote other users.
    </string>
    <string name="dialog_user_delete">
        Please be aware that if you delete this account, all data, privileges
        and PLCs associated with it will be deleted.
    </string>
    <string name="dialog_plc_delete">
        Please be aware that if you delete this PLC, all data associated with
        it will be deleted.
    </string>
    <string name="dialog_privacy_policy">
        <![CDATA[
            <p>
                PLCMonitor does not share personal information
                of any kind with anyone. We will not sell or rent
                your name or personal information to any third
                party. We <strong>DO NOT</strong> sell, rent or provide
                outside access to our mailing list or any data we store.
                Any data that a user stores via our facilities is wholly
                owned by that user or business. At any time a user
                or business is free to take their data and leave, or
                to simply delete their data from our facilities.
            </p>
            <p>
                PLCMonitor only collects such personal
                information that is necessary for you to access and
                use our services. This personal information
                includes first name, last name, and email address.
            </p>
            <p>
                PLCMonitor may release personal information if
                PLCMonitor is required to by law, search warrant,
                subpoena, court order or fraud investigation. We may
                also use personal information in a manner that does
                not identify you specifically nor allow you to be
                contacted but does identify certain criteria about
                our application\'s users in general (such as we may
                inform third parties about the number of registered
                users, number of times the application has been download).
            </p>
        ]]>
    </string>
    <string name="dialog_terms_use">
        <![CDATA[
            <h5><font color="#26A69A">1. General Terms</font></h5>
            <p>
                <strong>1.1</strong> By accessing and placing an order with
                PLCMonitor, you confirm that you are in agreement with
                and bound by the terms and conditions contained in the Terms
                Of Use outlined below. These terms apply to the entire
                application and any email or other type of communication between
                you and PLCMonitor.
            </p>
            <h5><font color="#26A69A">2. Ownership</font></h5>
            <p>
                <strong>2.1</strong> Ownership of the product is governed by
                the usage license selected by the seller.
            </p>
            <h5><font color="#26A69A">3. Changes to terms</font></h5>
            <p>
                <strong>3.1</strong> If we change our terms of use we will post
                those changes on this page. Registered users will be sent an email
                that outlines changes made to the terms of use.
            </p>
        ]]>
    </string>

    <!-- Strings related to errors fields -->
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_password_confirm">The password doesn\'t match</string>
    <string name="error_incorrect_email">This email doesn\'t exist</string>
    <string name="error_invalid_db_amount">This data block amount is invalid</string>
    <string name="error_invalid_db_number">This data block number is invalid</string>
    <string name="error_invalid_db_offset">This data b lock offset is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_first_name">This first name is invalid</string>
    <string name="error_invalid_ip">This IP address is invalid</string>
    <string name="error_invalid_last_name">This last name is invalid</string>
    <string name="error_invalid_password">This password must contain at least 8 characters</string>
    <string name="error_invalid_rack">Th is rack must be an integer</string>
    <string name="error_invalid_slot">This slot must be an integer</string>
    <string name="error_invalid_term_privacy">You must accept the Terms of Use and Privacy Policy</string>
    <string name="error_unique_email">This email address is already registered</string>

    <!-- Strings related to messages displays by Snackbar -->
    <string name="message_disconnect">
        <![CDATA[
            Account disconnected with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_failure_connection">
        <![CDATA[
            The PLC connection <font color="#ff5252">failed</font>!
        ]]>
    </string>
    <string name="message_failure_delete">
        <![CDATA[
            You must first give the <font color="#b2dfdb">permissions</font>
            to another user!
        ]]>
    </string>
    <string name="message_failure_settings">
        <![CDATA[
            Update <font color="#FF4081">failed</font>: %s
        ]]>
    </string>
    <string name="message_missing_functionnality">
        <![CDATA[
            This feature is not <font color="#b2dfdb">yet</font> available
        ]]>
    </string>
    <string name="message_missing_network">
        <![CDATA[
            Attempt to connect <font color="#ff5252">failed</font>!
        ]]>
    </string>
    <string name="message_no_connection">Not yet available!</string>
    <string name="message_successful_plc_creation">
        <![CDATA[
            PLC created with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_successful_plc_edited">
        <![CDATA[
            PLC edited with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_successful_plc_delete">
        <![CDATA[
            PLC deleted with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_successful_user_creation">
        <![CDATA[
            Account created with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_successful_user_delete">
        <![CDATA[
            User deleted with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_successful_user_update">
        <![CDATA[
           Information updated with <font color="#b2dfdb">success</font>!
        ]]>
    </string>
    <string name="message_welcome">
        <![CDATA[
            Hello, <font color="#b2dfdb"> %s!</font>
        ]]>
    </string>
    <string name="message_welcome_back">
        <![CDATA[
            Welcome back, <font color="#b2dfdb">%s!</font>
        ]]>
    </string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to prompt fields -->
    <string name="prompt_about">About</string>
    <string name="prompt_adapter_ip">IP: %s</string>
    <string name="prompt_adapter_rack">Rack: %d</string>
    <string name="prompt_adapter_slot">Slot: %d</string>
    <string name="prompt_before_terms_use">I agree to</string>
    <string name="prompt_between_terms_privacy">and </string>
    <string name="prompt_connection">Connection</string>
    <string name="prompt_db_amount">Amount</string>
    <string name="prompt_db_data">Data</string>
    <string name="prompt_db_number">DB Number</string>
    <string name="prompt_db_offset">Offset</string>
    <string name="prompt_email">E-Mail Address</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_ip">IP</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_plc_add">Add PLC</string>
    <string name="prompt_plc_name">Name</string>
    <string name="prompt_privacy_policy">Privacy Policy</string>
    <string name="prompt_profile_admin">Administrator</string>
    <string name="prompt_profile_user">Standard</string>
    <string name="prompt_rack">Rack</string>
    <string name="prompt_register">Not account yet? Sign up!</string>
    <string name="prompt_sign_in">Already register? Sign in!</string>
    <string name="prompt_slot">Slot</string>
    <string name="prompt_terms_use">Terms of Use</string>
    <string name="prompt_user_name">%1$s %2$s</string>

</resources>