<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/snackbarPosition"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="255"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_plc_name"
                android:id="@+id/txtPlcName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="15"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_ip"
                android:id="@+id/txtPlcIp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="6"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_rack"
                android:id="@+id/txtPlcRack"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="6"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_slot"
                android:id="@+id/txtPlcSlot"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:maxLength="5"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_db_number"
                android:id="@+id/txtDbNumber"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:maxLength="2"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_db_offset"
                android:id="@+id/txtDbOffset"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:maxLength="4"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_db_amount"
                android:id="@+id/txtDbAmount"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_edit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_edit_plc"
            android:elevation="50dp"
            android:textStyle="bold"
            android:background="@drawable/btn_ripple"
            android:textColor="@color/primary_text"/>

    </LinearLayout>
</RelativeLayout>